compiler-core/src/parse/snapshots/gleam_core__parse__tests__attributes_with_improper_definition.snap
---
source: compiler-core/src/parse/tests.rs
expression: "\n@deprecated(\"1\")\n@external(erlang, \"module\", \"fun\")\n"
snapshot_kind: text
---
----- SOURCE CODE

@deprecated("1")
@external(erlang, "module", "fun")


----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:2:1
  │  
2 │ ╭ @deprecated("1")
3 │ │ @external(erlang, "module", "fun")
  │ ╰──────────────────────────────────^ I was expecting a function or type definition after this
