compiler-core/src/parse/snapshots/gleam_core__parse__tests__block_of_two.snap
---
source: compiler-core/src/parse/tests.rs
expression: "{ 1 2 }"
snapshot_kind: text
---
[
    Expression(
        Block {
            location: SrcSpan {
                start: 0,
                end: 7,
            },
            statements: [
                Expression(
                    Int {
                        location: SrcSpan {
                            start: 2,
                            end: 3,
                        },
                        value: "1",
                        int_value: 1,
                    },
                ),
                Expression(
                    Int {
                        location: SrcSpan {
                            start: 4,
                            end: 5,
                        },
                        value: "2",
                        int_value: 2,
                    },
                ),
            ],
        },
    ),
]
